--- a/src/pages/Competition/Competition.css
+++ b/src/pages/Competition/Competition.css
@@ -92,6 +92,15 @@
 
 .finalists-item img {
   width: 100%;
+  transition: transform 0.3s ease;
+}
+
+.finalists-item img:hover {
+  transform: scale(1.1);
+}
+
+.finalists-item img:last-child {
+  margin-top: 16px;
 }
 
 .finalists-item-title {
@@ -108,6 +117,7 @@
   justify-content: center;
   margin: 48px 0;
   gap: 150px;
+  margin-top: 150px;
 }
 
 .finalist-arrows img {
@@ -146,16 +156,20 @@
     height: 400px;
     padding-top: 100px;
   }
+
   .competition-banner h1 {
     font-size: 30px;
   }
+
   .finalists-item {
     width: calc(50% - 32px);
   }
+
   .finalists-item-title {
     font-size: 13px;
     margin: 0 4px;
   }
+
   .thank-you-partners {
     font-size: 24px;
   }
